reset after first flip done

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<link rel="stylesheet" type="text/css" href="assets/style.css">
 </head>
 <body>
-	<div class="container-fluid">
+	<div class="">
 		<header>
 			<nav class="row">
 				<div class="col-xs-12">
@@ -44,6 +44,8 @@
 				</section>
 			</div>
 		</main>
+		<footer>
+		</footer>
 	</div>
 	<script
 			src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
