--- a/index.html
+++ b/index.html
@@ -10,43 +10,41 @@
 	<link rel="stylesheet" type="text/css" href="assets/style.css">
 </head>
 <body>
-	<div class="">
-		<header>
-			<nav class="row">
-				<div class="col-xs-12">
-					<h1 class="game_title">Tunes</h1>
-				</div>
-			</nav>
-		</header>
-		<main>
-			<div class="row">
-				<aside id="sidebar" class="col-xs-2">
-					<div class="stats">
-						<h1>Stats:</h1>
-						<h3 class="games-played"><span class="label">Games Played: </span><span id="games-played" class="value">0</span></h3>
-						<h3 class="attempts"><span class="label">Attempts: </span><span id="attempts" class="value">0</span></h3>
-						<h3 class="accuracy"><span class="label">Accuracy: </span><span id="accuracy" class="value">0%</span></h3>
-					</div>
-					<div>
-						<h2 class="status">Game Info</h2>
-						<br>
-						<button id="reset" class="btn">Reset Game</button>
-						<br>
-						<h3><a class="aboutme_link" href="about.html">About Me</a></h3>
-					</div>
-				</aside>
-				<section class="col-xs-10">
-					<div class="game-area row">
-						<div class="row1"></div>
-						<div class="row2"></div>
-						<div class="row3"></div>
-					</div>
-				</section>
+<div class="container">
+
+</div>
+	<header>
+		<nav>
+			<div>
+				<h1 class="game_title">Tunes</h1>
 			</div>
-		</main>
-		<footer>
-		</footer>
+		</nav>
+	</header>
+	<div class="main_section">
+		<aside class="sidebar">
+			<div class="stats">
+				<h1>Stats:</h1>
+				<h3 class="games-played"><span class="label">Games Played: </span><span id="games-played" class="value">0</span></h3>
+				<h3 class="attempts"><span class="label">Attempts: </span><span id="attempts" class="value">0</span></h3>
+				<h3 class="accuracy"><span class="label">Accuracy: </span><span id="accuracy" class="value">0%</span></h3>
+			</div>
+			<div>
+				<h2 class="status">Game Info</h2>
+				<br>
+				<button id="reset" class="btn">Reset Game</button>
+				<br>
+				<h3><a class="aboutme_link" href="about.html">About Me</a></h3>
+				<div id="clock" class="clock"></div>
+			</div>
+		</aside>
+		<div class="game-area">
+			<div class="row1"></div>
+			<div class="row2"></div>
+			<div class="row3"></div>
+		</div>
 	</div>
+	<footer>
+</footer>
 	<script
 			src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
 			integrity="sha256-k2WSCIexGzOj3Euiig+TlR8gA0EmPjuc79OEeY5L45g="
