--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Patrick+Hand+SC" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Bree+Serif|Patrick+Hand+SC" rel="stylesheet">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="assets/style.css">
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
 <div class="container">
@@ -38,9 +38,7 @@
 			</div>
 		</aside>
 		<div class="game-area">
-			<div class="row1"></div>
-			<div class="row2"></div>
-			<div class="row3"></div>
+			<div class="row"></div>
 		</div>
 	</div>
 	<footer>
@@ -50,6 +48,6 @@
 			integrity="sha256-k2WSCIexGzOj3Euiig+TlR8gA0EmPjuc79OEeY5L45g="
 			crossorigin="anonymous"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-	<script type="text/javascript" src="assets/script.js"></script>
+	<script type="text/javascript" src="script.js"></script>
 </body>
 </html>
