reworked match timer functionality

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 				<button id="reset" class="btn">Reset Game</button>
 				<br>
 				<h3><a class="aboutme_link" href="about.html">About Me</a></h3>
-				<div id="clock" class="clock"></div>
+				<div><span></span></div>
 			</div>
 		</aside>
 		<div class="game-area">
