--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Patrick+Hand+SC" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Bree+Serif|Patrick+Hand+SC" rel="stylesheet">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="assets/styles/style.css">
 </head>
 <body>
 <div class="container">
@@ -48,6 +48,10 @@
 			integrity="sha256-k2WSCIexGzOj3Euiig+TlR8gA0EmPjuc79OEeY5L45g="
 			crossorigin="anonymous"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-	<script type="text/javascript" src="script.js"></script>
+	<script type="text/javascript" src="assets/scripts/controller.js"></script>
+	<script type="text/javascript" src="assets/scripts/model.js"></script>
+	<script type="text/javascript" src="assets/scripts/view.js"></script>
+
+	<script type="text/javascript" src="assets/scripts/main.js"></script>
 </body>
 </html>
