--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 	<link href="https://fonts.googleapis.com/css?family=Bree+Serif|Patrick+Hand+SC" rel="stylesheet">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="assets/styles/style.css">
+	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha256-k2WSCIexGzOj3Euiig+TlR8gA0EmPjuc79OEeY5L45g=" crossorigin="anonymous"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+	<script type="text/javascript" src="assets/scripts/model.js"></script>
+	<script type="text/javascript" src="assets/scripts/view.js"></script>
+	<script type="text/javascript" src="assets/scripts/main.js"></script>
 </head>
 <body>
 <div class="container">
@@ -41,17 +46,8 @@
 			<div class="row"></div>
 		</div>
 	</div>
-	<footer>
-</footer>
-	<script
-			src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-			integrity="sha256-k2WSCIexGzOj3Euiig+TlR8gA0EmPjuc79OEeY5L45g="
-			crossorigin="anonymous"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-	<script type="text/javascript" src="assets/scripts/controller.js"></script>
-	<script type="text/javascript" src="assets/scripts/model.js"></script>
-	<script type="text/javascript" src="assets/scripts/view.js"></script>
 
-	<script type="text/javascript" src="assets/scripts/main.js"></script>
+<footer>
+</footer>
 </body>
 </html>
