--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
 	<link rel="stylesheet" type="text/css" href="assets/styles/style.css">
 	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha256-k2WSCIexGzOj3Euiig+TlR8gA0EmPjuc79OEeY5L45g=" crossorigin="anonymous"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-	<script type="text/javascript" src="assets/scripts/model.js"></script>
+<!-- 	<script type="text/javascript" src="assets/scripts/model.js"></script>
 	<script type="text/javascript" src="assets/scripts/view.js"></script>
-	<script type="text/javascript" src="assets/scripts/main.js"></script>
+	<script type="text/javascript" src="assets/scripts/main.js"></script> -->
+	<script src="assets/scripts/script.js"></script>
 </head>
 <body>
 <div class="container">
